Fix to remove warnings/crashes